--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
 <body>
 
 <header>
-  <h1>Scholar’s Academy</h1>
+  <div class="academy-title">
+  <p class="owner-name">Irfan Raza Sir’s</p>
+  <h1 class="academy-name">Scholar’s Academy</h1>
+</div>
+
   <p>Building Skills. Building Trust.</p>
 </header>
 
