--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 <header>
   <div class="academy-title">
   <p class="owner-name">Irfan Raza Sir</p>
-  <h1 class="academy-name">Scholars Academy</h1>
+ <div class="header-logo">
+  <img src="images/logo.png" alt="Logo" class="logo">
+  <h1>Scholars Academy</h1>
 </div>
 
   <p>Building Skills. Building Trust.</p>
