--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
   <div class="academy-title">
   <p class="owner-name">Irfan Raza Sir</p>
 <div class="header-logo">
-  <img src="images/logo.png" alt="Logo" class="logo">
+  <<div class="header-logo">
+  <img src="images/logo.png" alt="Scholar Academy Logo" class="logo">
+  <h1>Scholars Academy</h1>
+</div> 
   <h1>Scholars Academy</h1>
 </div>
 
